--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,11 +4,16 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
+        {
+            "name": "Debug Local File",
+            "type": "Ruby",
+            "request": "launch",
+            "program": "${file}"
+        },
 
-        
         {
             "type": "rdbg",
-            "name": "Debug current file with rdbg",
+            "name": "Debug input file with rdbg",
             "request": "launch",
             "script": "${file}",
             "args": [],
@@ -16,8 +21,12 @@
         },
         {
             "type": "rdbg",
-            "name": "Attach with rdbg",
-            "request": "attach"
-        }
+            "name": "Debug current file with rdbg",
+            "request": "launch",
+            "script": "${file}",
+            "args": [],
+            "askParameters": false
+        },
+
     ]
 }
