--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,6 +4,7 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
+
         {
             "name": "Debug Local File",
             "type": "Ruby",
@@ -26,6 +27,14 @@
             "script": "${file}",
             "args": [],
             "askParameters": false
+        },
+        {
+            "type": "ruby-debug",
+            "request": "launch",
+            "name": "Launch File",
+            "program": "${file}",
+            "programArgs": [],
+            "useBundler": false
         },
 
     ]
